# tutto-mcp-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  build.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  terraform-alibaba.sh
.github/workflows/: ci.yml  deploy.yml
docs/: architecture.md  getting-started.md
scripts/: init_database.py
src/: main.py  mcp_server.py
src/api/: __init__.py  auth.py  customer_auth.py  deps.py
src/core/: auth_middleware.py  config.py  database.py  lifespan.py  logging.py
src/mcp/: __init__.py  coupon_tools.py  message_tools.py  plan_tools.py  schedule_tools.py  security_identity_tools.py  session_tools.py  subscription_tools.py  tenant_tools.py  text_tools.py  user_tools.py  whatsapp_tools.py  worker_tools.py
src/models/: coupon.py  customer.py  instruction.py  message.py  plan.py  pyobjectid.py  schedule.py  security_identity.py  session.py  subscription.py  tenant.py  user.py  webhook_event.py
src/repositories/: coupon_repository.py  customer_repository.py  event_repository.py  instruction_repository.py  message_repository.py  plan_repository.py  schedule_repository.py  security_identity_repository.py  session_repository.py  subscription_repository.py  tenant_repository.py  user_repository.py
src/services/: auth_service.py  coupon_service.py  customer_service.py  evolution_service.py  google_auth_service.py  instruction_service.py  message_service.py  payment_service.py  plan_service.py  schedule_service.py  session_service.py  subscription_service.py  tenant_service.py  (+1 more)
terraform/: backend.tf  database.tf  main.tf  provider.tf  registry.tf  sa.tf  secret.tf  variables.tf
tests/: __init__.py  test_server.py  test_tools.py
(+21 files in other folders)
